//
//  NewUITest.swift
//  SecondUITest
//
//  Created by Nithin Nizam on 11/12/20.
//  Copyright © 2020 Nithin. All rights reserved.
//

import XCTest

class NewUITest: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testSlider() throws {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.

        let app = XCUIApplication()

        app.staticTexts["Item 1"].tap()
        app.sliders["slider"].adjust(toNormalizedSliderPosition: 1.0)
        sleep(5)
        app.navigationBars["iOSUI.SecondView"].buttons["Back"].tap()

    }

}
